reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__scheduler.rs_line_1163_col_9.log

*** crates/tracewake-core/src/scheduler.rs:1163:9: replace no_human::build_duration_routine_step_completed_event -> EventEnvelope with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/scheduler.rs
+++ replace no_human::build_duration_routine_step_completed_event -> EventEnvelope with Default::default()
@@ -1155,64 +1155,17 @@
     fn build_duration_routine_step_completed_event(
         process_id: &ProcessId,
         execution_id: &RoutineExecutionId,
         actor_id: &ActorId,
         ordinary_action_id: &str,
         content_manifest_id: &ContentManifestId,
         completion_event: &EventEnvelope,
     ) -> EventEnvelope {
-        let mut event = EventEnvelope::new_caused_v1(
-            EventId::new(format!(
-                "event.routine_step_completed.{}.{}",
-                execution_id.as_str(),
-                completion_event.event_id.as_str()
-            ))
-            .unwrap(),
-            EventKind::RoutineStepCompleted,
-            0,
-            0,
-            completion_event.sim_tick,
-            OrderingKey::new(
-                completion_event.sim_tick,
-                SchedulePhase::NoHumanProcess,
-                SchedulerSourceId::Process(process_id.clone()),
-                ProposalSequence::new(0),
-                ActionId::new("routine_step_completed").unwrap(),
-                vec![
-                    actor_id.as_str().to_string(),
-                    execution_id.as_str().to_string(),
-                ],
-                format!(
-                    "routine_step_completed:{}:{}",
-                    actor_id.as_str(),
-                    completion_event.event_id.as_str()
-                ),
-            ),
-            content_manifest_id.clone(),
-            vec![EventCause::Event(completion_event.event_id.clone())],
-        )
-        .unwrap();
-        event.actor_id = Some(actor_id.clone());
-        event.process_id = Some(process_id.clone());
-        event.proposal_id = completion_event.proposal_id.clone();
-        event.participants = vec![actor_id.to_string(), execution_id.to_string()];
-        event.payload = vec![
-            PayloadField::new("routine_execution_id", execution_id.as_str()),
-            PayloadField::new("actor_id", actor_id.as_str()),
-            PayloadField::new(
-                "progress_tick",
-                completion_event.sim_tick.value().to_string(),
-            ),
-            PayloadField::new("ordinary_event_id", completion_event.event_id.as_str()),
-            PayloadField::new("ordinary_action_id", ordinary_action_id),
-        ];
-        event.effects_summary =
-            "duration routine step completed with ordinary completion ancestry".to_string();
-        event
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     fn scheduled_completion_tick(event: &EventEnvelope) -> Option<SimTick> {
         event
             .payload
             .iter()
             .find(|field| field.key == "expected_completion_tick")
             .and_then(|field| field.value.parse::<u64>().ok())


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/scheduler.rs` has changed (1781905143.487925741s, 4s after last build at 1781905139.599925712s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `EventEnvelope: Default` is not satisfied
    --> crates/tracewake-core/src/scheduler.rs:1163:9
     |
1163 |         Default::default() /* ~ changed by cargo-mutants ~ */
     |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `EventEnvelope`
    --> crates/tracewake-core/src/events/envelope.rs:717:1
     |
 717 | pub struct EventEnvelope {
     | ^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `envelope::EventEnvelope: Default` is not satisfied
    --> crates/tracewake-core/src/scheduler.rs:1163:9
     |
1163 |         Default::default() /* ~ changed by cargo-mutants ~ */
     |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `envelope::EventEnvelope`
    --> crates/tracewake-core/src/events/envelope.rs:717:1
     |
 717 | pub struct EventEnvelope {
     | ^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
